--- a/Sources/Blazor.Monaco/Blazor.Monaco.csproj
+++ b/Sources/Blazor.Monaco/Blazor.Monaco.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <RazorLangVersion>3.0</RazorLangVersion>
         <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.32" />
-        <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.32" />
+        <PackageReference Include="Microsoft.AspNetCore.Components" Version="6.0.25" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.25" />
     </ItemGroup>
 
     <Target Name="WebpackBuild" BeforeTargets="Build">
