--- a/Sources/Blazor.Monaco/Blazor.Monaco.csproj
+++ b/Sources/Blazor.Monaco/Blazor.Monaco.csproj
@@ -7,14 +7,38 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Components" Version="6.0.25" />
-        <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.25" />
+        <PackageReference Include="Microsoft.AspNetCore.Components" Version="6.0.25"/>
+        <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.25"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <SupportedPlatform Include="browser"/>
+        <Watch Include="**\*.ts"/>
+        <Watch Include="**\*.tsx"/>
+        <Content Remove="node_modules\**">
+            <!-- Npm modules must be excluded from file list -->
+        </Content>
+        <Content Remove="wwwroot\js\**">
+            <!-- TypeScript JS output is in that directory, it will be included at later stages of compilation -->
+        </Content>
+        <Content Update="tsconfig.json">
+            <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+            <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+        </Content>
+        <Content Update="package-lock.json">
+            <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+            <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+        </Content>
+        <Content Update="package.json">
+            <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+            <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+        </Content>
     </ItemGroup>
 
     <Target Name="WebpackBuild" BeforeTargets="Build">
-        <Exec Command="npm install" />
-        <Exec Command="npm run build-dev" Condition="$(Configuration) == 'Debug'" />
-        <Exec Command="npm run build-prod" Condition="$(Configuration) == 'Release'" />
+        <Exec Command="npm install"/>
+        <Exec Command="npm run build-dev" Condition="$(Configuration) == 'Debug'"/>
+        <Exec Command="npm run build-prod" Condition="$(Configuration) == 'Release'"/>
     </Target>
 
 </Project>
