--- a/Sources/BlazorMonacoEditor.Playground.Web/BlazorMonacoEditor.Playground.Web.csproj
+++ b/Sources/BlazorMonacoEditor.Playground.Web/BlazorMonacoEditor.Playground.Web.csproj
@@ -13,7 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Blazor.Monaco.Playground\Blazor.Monaco.Playground.csproj" />
+      <ProjectReference Include="..\BlazorMonacoEditor.Playground\BlazorMonacoEditor.Playground.csproj" />
     </ItemGroup>
 
     <ItemGroup>
