--- a/Sources/BlazorMonacoEditor/BlazorMonacoEditor.csproj
+++ b/Sources/BlazorMonacoEditor/BlazorMonacoEditor.csproj
@@ -4,11 +4,14 @@
         <TargetFramework>net6.0</TargetFramework>
         <RazorLangVersion>3.0</RazorLangVersion>
         <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Components" Version="6.0.25"/>
         <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.25"/>
+        <PackageReference Include="Microsoft.CodeAnalysis" Version="4.6.0" />
+        <PackageReference Include="System.Reactive" Version="6.0.0" />
     </ItemGroup>
 
     <ItemGroup>
