--- a/Sources/BlazorMonacoEditor.Playground/BlazorMonacoEditor.Playground.csproj
+++ b/Sources/BlazorMonacoEditor.Playground/BlazorMonacoEditor.Playground.csproj
@@ -9,6 +9,8 @@
         <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.0"/>
         <PackageReference Include="Microsoft.AspNetCore.Components" Version="7.0.0"/>
         <PackageReference Include="ReactiveUI.Fody" Version="19.5.31" />
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.9.0-3.23629.3" />
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Features" Version="4.9.0-3.23629.3" />
     </ItemGroup>
 
     <ItemGroup>
