--- a/Sources/BlazorMonacoEditor/BlazorMonacoEditor.csproj
+++ b/Sources/BlazorMonacoEditor/BlazorMonacoEditor.csproj
@@ -6,6 +6,7 @@
         <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
         <Nullable>enable</Nullable>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+        <NoWarn>CA1416;NU1701;CS0649;CS0414;CS1998;CS1591;</NoWarn>
         <EnableDefaultContentItems>true<!-- Important for Blazor Scoped CSS --></EnableDefaultContentItems>
     </PropertyGroup>
 
@@ -46,10 +47,21 @@
         <Message Importance="high" Text="Completed NPM Install" />
     </Target>
 
-    <Target Name="WebpackBuild" BeforeTargets="Build">
-        <Exec Command="npm install"/>
+    <Target Name="WebpackBuild" AfterTargets="NPMInstall">
+        <Message Importance="high" Text="Running NPM Webpack Build" />
         <Exec Command="npm run build-dev" Condition="$(Configuration) == 'Debug'"/>
         <Exec Command="npm run build-prod" Condition="$(Configuration) == 'Release'"/>
+        <ItemGroup>
+            <JSFiles Include="wwwroot/js/**">
+                <!-- Include TypeScript JS into file list, this is needed to allow for StaticWebAssets resolution -->
+            </JSFiles>
+        </ItemGroup>
+        <!-- Loop through each file in the Content item group and print its identity -->
+        <Message Importance="high" Text="Transpiled File via Webpack: %(JSFiles.Identity)" Condition="'@(JSFiles)' != ''"/>
+        <ItemGroup>
+            <Content Include="@(JSFiles)"/>
+        </ItemGroup>
+        <Message Importance="high" Text="Completed NPM Webpack Build" />
     </Target>
 
 </Project>
