--- a/Sources/BlazorMonacoEditor.Roslyn/BlazorMonacoEditor.Roslyn.csproj
+++ b/Sources/BlazorMonacoEditor.Roslyn/BlazorMonacoEditor.Roslyn.csproj
@@ -1,21 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
-        <EnableDefaultContentItems>true</EnableDefaultContentItems>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.0"/>
-        <PackageReference Include="Microsoft.AspNetCore.Components" Version="7.0.0"/>
         <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.0" />
         <PackageReference Include="ReactiveUI.Fody" Version="19.5.31" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.9.0-3.23629.3" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Features" Version="4.9.0-3.23629.3" />
     </ItemGroup>
 
+    
     <ItemGroup>
-      <ProjectReference Include="..\BlazorMonacoEditor.Roslyn\BlazorMonacoEditor.Roslyn.csproj" />
       <ProjectReference Include="..\BlazorMonacoEditor\BlazorMonacoEditor.csproj" />
     </ItemGroup>
 
