--- a/Sources/BlazorMonacoEditor/BlazorMonacoEditor.csproj
+++ b/Sources/BlazorMonacoEditor/BlazorMonacoEditor.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Components" Version="6.0.25"/>
         <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.25"/>
         <PackageReference Include="Microsoft.CodeAnalysis" Version="4.9.0-3.23629.3" />
+        <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.0" />
         <PackageReference Include="System.Reactive" Version="6.0.0" />
     </ItemGroup>
 
