--- a/Sources/BlazorMonacoEditor/tsconfig.json
+++ b/Sources/BlazorMonacoEditor/tsconfig.json
@@ -5,7 +5,7 @@
       "module": "CommonJS",
       "target": "es5",
       "outDir": "./dist",
-      "lib": ["dom", "es5", "es2015.collection", "es2015.promise"],
+      "lib": ["dom", "es5", "es2015", "es2015.collection", "es2015.promise"],
       "types": [],
       "baseUrl": "./node_modules",
       "jsx": "preserve",
