--- a/Sources/BlazorMonacoEditor/BlazorMonacoEditor.csproj
+++ b/Sources/BlazorMonacoEditor/BlazorMonacoEditor.csproj
@@ -14,7 +14,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Components" Version="7.0.2"/>
         <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.2"/>
-        <PackageReference Include="Microsoft.CodeAnalysis" Version="4.9.0-3.23629.3" />
+        <PackageReference Include="Microsoft.CodeAnalysis" Version="4.11.0" />
         <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="7.0.2" />
         <PackageReference Include="System.Reactive" Version="6.0.1" />
         <PackageReference Include="StronglyTypedId" Version="1.0.0-beta07" PrivateAssets="all" ExcludeAssets="runtime" />
