--- a/Sources/BlazorMonacoEditor.Roslyn/BlazorMonacoEditor.Roslyn.csproj
+++ b/Sources/BlazorMonacoEditor.Roslyn/BlazorMonacoEditor.Roslyn.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="7.0.2" />
+        <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="[7.0.2,]" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.11.0" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Features" Version="4.11.0" />
     </ItemGroup>
